Reduce the number of warning and switch to more recent Java code